objects/Monthly_Target__c.object
<CustomObject>
    <fields>
        <fullName>Apr_Proposed__c</fullName>
        <label>Apr Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Target__c</fullName>
        <label>Apr Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Proposed__c</fullName>
        <label>Aug Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_Target__c</fullName>
        <label>Aug Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Entry_Month__c</fullName>
        <label>Data Entry Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Entry_Year__c</fullName>
        <label>Data Entry Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dec_Proposed__c</fullName>
        <label>Dec Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_Target__c</fullName>
        <label>Dec Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Proposed__c</fullName>
        <label>Feb Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_Target__c</fullName>
        <label>Feb Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GAM_Code__c</fullName>
        <label>GAM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_DESC__c</fullName>
        <label>GAM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jan_Proposed__c</fullName>
        <label>Jan Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_Target__c</fullName>
        <label>Jan Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Proposed__c</fullName>
        <label>Jul Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_Target__c</fullName>
        <label>Jul Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Proposed__c</fullName>
        <label>Jun Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_Target__c</fullName>
        <label>Jun Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Proposed__c</fullName>
        <label>Mar Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_Target__c</fullName>
        <label>Mar Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Proposed__c</fullName>
        <label>May Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Target__c</fullName>
        <label>May Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Proposed__c</fullName>
        <label>Nov Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_Target__c</fullName>
        <label>Nov Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Proposed__c</fullName>
        <label>Oct Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_Target__c</fullName>
        <label>Oct Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Proposed__c</fullName>
        <label>Sep Proposed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_Target__c</fullName>
        <label>Sep Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Level__c</fullName>
        <label>Territory Level</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Monthly Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Territory_Code__c</columns>
        <columns>Territory_Name__c</columns>
        <columns>Data_Entry_Month__c</columns>
        <columns>Data_Entry_Year__c</columns>
        <columns>Jun_Proposed__c</columns>
        <columns>Jul_Proposed__c</columns>
        <columns>Aug_Proposed__c</columns>
        <columns>Sep_Proposed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Monthly  Target</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Target</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>